add summary to endpoints, bumb version minor, update api doc
