# api-documentation/openapi/openapi.json
@@ -2,7 +2,7 @@
     "openapi": "3.0.3",
     "info": {
         "title": "Name-to-ethnicity API",
-        "version": "1.0.0",
+        "version": "0.2.0",
         "description": "This is the official REST API documentation for www.name-to-ethnicity.com. Using our public API you can classify names into their most likely ethnicity and retrieve a list of all your models.",
         "termsOfService": "https://www.name-to-ethnicity.com/terms-of-service",
         "contact": {
@@ -209,7 +209,6 @@
             "InferenceSchema": {
                 "description": "Schema to validate name classification request data ",
                 "example": {
-                    "getDistribution": false,
                     "modelName": "chinese_german_french",
                     "names": [
                         "Cixin Liu",
@@ -228,16 +227,11 @@
                         },
                         "title": "Names",
                         "type": "array"
-                    },
-                    "getDistribution": {
-                        "title": "Getdistribution",
-                        "type": "boolean"
                     }
                 },
                 "required": [
                     "modelName",
-                    "names",
-                    "getDistribution"
+                    "names"
                 ],
                 "title": "InferenceSchema",
                 "type": "object"
@@ -272,6 +266,34 @@
                     ]
                 },
                 "title": "InferenceResponseSchema",
+                "type": "object"
+            },
+            "InferenceDistributionResponseSchema": {
+                "additionalProperties": {
+                    "additionalProperties": {
+                        "type": "number"
+                    },
+                    "type": "object"
+                },
+                "description": "Schema to validate the /classify-distribution POST response data ",
+                "example": {
+                    "Cixin Liu": {
+                        "chinese": 0.91,
+                        "french": 0.04,
+                        "german": 0.05
+                    },
+                    "Jules Verne": {
+                        "chinese": 0.2,
+                        "french": 0.75,
+                        "german": 0.13
+                    },
+                    "werner heisenberg": {
+                        "chinese": 0.06,
+                        "french": 0.07,
+                        "german": 0.87
+                    }
+                },
+                "title": "InferenceDistributionResponseSchema",
                 "type": "object"
             },
             "NationalitiesSchema": {
@@ -327,7 +349,7 @@
                 "tags": [
                     "Model Management"
                 ],
-                "description": "Get all models.",
+                "description": "Using this endpoint you can receive all your custom and N2Es default models.",
                 "summary": "Get all models.",
                 "operationId": "get_models_route",
                 "responses": {
@@ -360,7 +382,7 @@
                 "tags": [
                     "Model Management"
                 ],
-                "description": "Get all default models.",
+                "description": "Using this endpoint you can receive all models that N2E provides by default.",
                 "summary": "Get all default models.",
                 "operationId": "get_default_models_route",
                 "responses": {
@@ -390,7 +412,7 @@
                 "tags": [
                     "Classification"
                 ],
-                "description": "Classify names.",
+                "description": "Classifying names using this endpoint will return the predicted confidence for the most likely ethnicity.",
                 "summary": "Classify names.",
                 "operationId": "classification_route",
                 "responses": {
@@ -433,13 +455,61 @@
                 }
             }
         },
+        "/classify-distribution": {
+            "post": {
+                "tags": [
+                    "Classification"
+                ],
+                "description": "Classifying names using this endpoint will return the predicted confidence for each ethnicity.",
+                "summary": "Classify names, predicting entire distribution.",
+                "operationId": "classification_distribution_route",
+                "responses": {
+                    "200": {
+                        "description": "Successful classification",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/InferenceDistributionResponseSchema"
+                                }
+                            }
+                        }
+                    },
+                    "401": {
+                        "description": "Authentication failed"
+                    },
+                    "404": {
+                        "description": "Model not found"
+                    },
+                    "422": {
+                        "description": "Too many names"
+                    },
+                    "500": {
+                        "description": "Internal server error"
+                    }
+                },
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "requestBody": {
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "$ref": "#/components/schemas/InferenceSchema"
+                            }
+                        }
+                    }
+                }
+            }
+        },
         "/nationalities": {
             "get": {
                 "tags": [
                     "Miscellaneous"
                 ],
-                "description": "Returns a list of all available nationalities (49) and nat. groups (8) along with the amount of samples we have of them in our dataset.",
-                "summary": "Returns a list of all available nationalities (49) and nat. groups (8) along with the amount of samples we have of them in our dataset.",
+                "description": "Returns a list of all available nationalities (49) and nationality groups (8) along with the amount of samples we have of them in our dataset.",
+                "summary": "Get nationalities.",
                 "operationId": "get_nationalities_route",
                 "responses": {
                     "200": {
